@@ -5,10 +5,10 @@ import com.historialplus.historialplus.internal.record.entites.RecordEntity;
 import com.historialplus.historialplus.internal.recorddetail.mapper.RecordDetailDtoMapper;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 @Component
 public class RecordDtoMapper {
+    private RecordDtoMapper() {}
+
     public static RecordResponseDto toResponseDto(RecordEntity recordEntity) {
         return new RecordResponseDto(
                 recordEntity.getId(),
@@ -16,7 +16,7 @@ public class RecordDtoMapper {
                 recordEntity.getPerson().getUsers().stream().map(user -> user.getHospital().getName()).findFirst().orElse(""),
                 recordEntity.getVisits().stream()
                         .map(RecordDetailDtoMapper::toResponseDto)
-                        .collect(Collectors.toList())
-        );
+                        .toList());
+
     }
 }
