@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -24,7 +23,7 @@ public class RoleServiceImpl implements RoleService {
 
         return roles.stream()
             .map(RoleMapper::roleEntityToRoleDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
